<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>AgileDev DBC4J</name>
    <groupId>org.uniknow.agiledev.dbc4j</groupId>
    <artifactId>parent</artifactId>
    <version>0.2.0</version>
    <packaging>pom</packaging>
    <description>Parent pom for Design By Contract for Java</description>
    <url>https://github.com/UniKnow/Dbc4J</url>

    <inceptionYear>2017</inceptionYear>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <organization>
        <name>UniKnow</name>
        <url>http://www.uniknow.org</url>
    </organization>

    <developers>
        <developer>
            <id>mase</id>
            <name>Mark Schenk</name>
            <organization>UniKnow</organization>
            <timezone>Europe/Amsterdam</timezone>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <project.build.sourceEncoding>
            UTF-8
        </project.build.sourceEncoding>
        <project.reporting.outputEncoding>
            UTF-8
        </project.reporting.outputEncoding>

        <github.global.server>github</github.global.server>

        <timestamp>${maven.build.timestamp}</timestamp>
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>

        <!-- Versions  dependencies -->
        <aspectj.version>1.9.6</aspectj.version>
        <contiperf.version>2.3.4</contiperf.version>
        <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
        <javax.inject.version>1</javax.inject.version>
        <javax.el.version>3.0.3</javax.el.version>
        <junit.version>4.12</junit.version>

        <!-- Versions plugins -->
        <aspectj-maven-plugin.version>1.12.1</aspectj-maven-plugin.version>
    </properties>

    <distributionManagement>
        <site>
            <id>github-pages-site</id>
            <url>site/${project.version}</url>
        </site>

        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
            </url>
        </repository>

    </distributionManagement>


    <scm>
        <connection>https://github.com/UniKnow/AsciiDoclet.git</connection>
        <developerConnection>https://github.com/UniKnow/AsciiDoclet.git</developerConnection>
        <url>https://github.com/UniKnow/AsciiDoclet</url>
    </scm>

    <modules>
        <module>dbc4java</module>
        <module>tutorial</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <!--
                Maven Java compiler plugin
                -->
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.3.1</version>
                <configuration>
                    <skip>false</skip>
                    <fail>true</fail>
                    <rules>
                        <requireUpperBoundDeps/>
                        <!-- ensure uniquely versioned dependencies during the build -->
                        <dependencyConvergence/>
                    </rules>
                </configuration>
                <executions>
                    <execution>
                        <id>enforce-dependencies</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Licensing java sources -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>timestamp-property</id>
                        <goals>
                            <goal>timestamp-property</goal>
                        </goals>
                        <configuration>
                            <name>current.year</name>
                            <pattern>yyyy</pattern>
                            <unit>year</unit>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.0.0</version>
                <configuration>
                    <licenseName>apache_v2</licenseName>
                    <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
                    <!-- Don't change these settings; //// is treated as comment by asciidoc doclet -->
                    <processStartTag>////========================LICENSE_START=================================</processStartTag>
                    <sectionDelimiter>////</sectionDelimiter>
                    <processEndTag>////=========================LICENSE_END==================================</processEndTag>
                </configuration>
                <executions>
                    <execution>
                        <id>update-license</id>
                        <goals>
                            <goal>update-file-header</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <additionalJOptions>
                        <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption> <!--1-->
                        <additionalJOption>-Xdoclint:all,-html,-accessibility,-missing</additionalJOption> <!--2-->
                        <additionalJOption>--base-dir</additionalJOption>
                        <additionalJOption>${project.basedir}</additionalJOption>
                    </additionalJOptions>
                    <doclet>org.asciidoctor.asciidoclet.Asciidoclet</doclet>
                    <docletArtifact>
                        <groupId>org.uniknow</groupId>
                        <artifactId>asciidoclet</artifactId>
                        <version>2.1.1</version>
                    </docletArtifact>
                    <detectJavaApiLink>true</detectJavaApiLink>
                </configuration>
            </plugin>

        </plugins>

    </build>

    <profiles>
        <profile>
            <id>release-signed-artifacts</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- Plugins for releasing artifacts to maven central repository -->
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.6</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>2.5.3</version>
                        <configuration>
                            <autoVersionSubmodules>true</autoVersionSubmodules>
                            <useReleaseProfile>true</useReleaseProfile>
                            <releaseProfiles>release-signed-artifacts</releaseProfiles>
                            <goals>deploy</goals>
                        </configuration>
                    </plugin>
                    <!-- END: Plugins for releasing/branching project -->

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>